<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bb_black"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/lin_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/select_no"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:layout_height="54dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_save2"
                android:textSize="16dp"
                android:textColor="@color/top_heiziti"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/huihuisebiankuang"
            android:layout_height="2px"/>
        <LinearLayout
            android:id="@+id/select_save"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:layout_height="54dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_caogao2"
                android:textSize="16dp"
                android:textColor="@color/top_heiziti"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/edit_hui"
            android:layout_height="10dp"/>
        <LinearLayout
            android:id="@+id/select_dismiss"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:layout_height="54dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_cached_cancel"
                android:textSize="18dp"
                android:textColor="@color/yanzhengma"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>