<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="61dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/camera_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/camere_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:text="@string/wenben14"
                android:textColor="@color/white"
                android:textSize="14dp"

                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel_center"
            android:layout_width="match_parent"
            android:layout_marginTop="-20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/question_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="48dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tiwen_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:text="@string/wenben15"
                    android:textColor="@color/white"
                    android:textSize="14dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="48dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shiping_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:text="@string/wenben16"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/select_dismiss"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/quxiaodismiss_icon" />


</RelativeLayout>